[INJICERT-1145] Critical Code Review fixes (#386)
* Adding WellKnownController, deprecating well-known endpoints in issuance and removing well-known endpoint from credential-config controller

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Adding validation for signatureCryptoSuite for ldp_vc and mso_mdoc formats, adding validation for signatureAlgo for sd-jwt format

Signed-off-by: jackjain <jackjain1995@gmail.com>

* removing the missed condition for signatureCryptoSuite field

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Add separate fields for sdJWT and mso_mdoc claims in credential config request/response, storing the same in separate columns in DB

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Using credentialConfigKeyId instead of ID in update, fetch and delete credential-configurations endpoints

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Make signature crypto suite mandatory in credential-configuration request

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Move CredentialConfigMapper to util package

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Refactor parameter name for validateCredentialConfiguration method

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Remove suspension status purpose from properties file

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Removed cryptographic_binding_methods_supported, credential_signing_alg_values_supported and proof_types_supported from credential configuration request/response

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Add handling for sdJWT VC format in the CacheKeyGenerator

Signed-off-by: jackjain <jackjain1995@gmail.com>

* Remove unused code related to issuer metadata fetch in VCIssuance and Certify services

Signed-off-by: jackjain <jackjain1995@gmail.com>

---------

Signed-off-by: jackjain <jackjain1995@gmail.com>